[package]
name = "semver_repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"

[dev-dependencies]
tempfile = "3"